--- a/Vidly/Views/Shared/_NavBar.cshtml
+++ b/Vidly/Views/Shared/_NavBar.cshtml
@@ -10,8 +10,8 @@
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
-				<li>@Html.ActionLink("Customers", "Index", "")</li>
-				<li>@Html.ActionLink("Movies", "Index", "Movies", new { id = 1 }, null)</li>
+				<li>@Html.ActionLink("Customers", "Index", "Customers")</li>
+				<li>@Html.ActionLink("Movies", "Index", "Movies")</li>
 				@*<li>@Html.ActionLink("Home", "Index", "Home")</li>
 				<li>@Html.ActionLink("About", "About", "Home")</li>
 				<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
