--- a/Vidly/Views/Customers/Details.cshtml
+++ b/Vidly/Views/Customers/Details.cshtml
@@ -15,7 +15,7 @@
 	<li>Membership Type: @Model.MembershipType.Name</li>
 	@if (Model.Birthdate.HasValue)
 	{
-		<li>Birthdate: @Model.Birthdate.Value.ToShortDateString)</li>
+		<li>Birthdate: @Model.Birthdate.Value.ToShortDateString()</li>
 	}
 </ul>
 
