--- a/Vidly/Views/Movies/Index.cshtml
+++ b/Vidly/Views/Movies/Index.cshtml
@@ -5,12 +5,13 @@
 }
 
 <h2>Movies</h2>
+<p>@Html.ActionLink("New Movie", "New", "Movies", null, new { @class = "btn btn-primary" })</p>
 @if (!Model.Any())
 {
 	<p>We have no movies.</p>
 }
 else
-{
+{	
 	<table class="table table-bordered table-hover">
 		<thead>
 			<tr>
